--- a/src/App.css
+++ b/src/App.css
@@ -145,6 +145,7 @@ body {
   overflow: hidden;
   font-family: "Open Sans", sans-serif;
   font-weight: 300;
+  overflow: hidden;
 
   background: linear-gradient(126deg, rgba(61, 61, 61, 1) 16%, rgba(33, 33, 33, 1) 72%);
   /* font-family: 'Lora', serif; */
